--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
 /*  your css code here. If applicable */
+#rotate{
+	width:200px;
+	background-color:black;
+	height:2px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform-origin: left center;
+    transform: rotate(0deg);
+}
